Fixed icons spacing and practice add button in yatra settings

--- a/frontend/icons/style.css
+++ b/frontend/icons/style.css
@@ -10,15 +10,21 @@
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
+  font-size: 1.15em;
   speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+  margin-right: 6px;
+  margin-left: 6px;
+  vertical-align: middle;
+  text-align: center;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
